--- a/style.css
+++ b/style.css
@@ -1,15 +1,37 @@
+/* colores
+https://visme.co/blog/wp-content/uploads/2016/09/website46-1024x512.jpg
+265077  celeste gris
+022140  azul profundo
+494B68  violeta gris
+1E4258  azul gris
+2D5F5D  verde
+
+mios:
+00242D azul oscuro
+*/
 .header{
-  height: 20%;
-  width: 75%;
-  background: darkred;
-  align-self: center;
+  height: 116px;
+  width: 920px;
+  background: #2D5F5D;
   text-align: center;
   margin: 0 auto;
-
+  padding:0;
 }
+
+#pre-body{
+  width: 800px;
+  height: 148px;
+  background: #595B78;
+  text-align: center;
+  margin: auto;
+  padding:0;
+  font-size: 30px;
+  line-height: 64px;
+}
+
 .body{
   width: 100%;
-  background:#7B7E80;
+  background:#022140;
 }
 
 #proyectos, #conteiner_muestras {
@@ -20,7 +42,7 @@
 
 #proyectos{
   text-align: center;
-  width: 24%;
+  width: 23%;
   height: 240px;
   background:#C3C3C3;
 
@@ -29,16 +51,18 @@
   top: 0;
 }
 
-.index_link {
-  background:none;
-  border:none;
+#conteiner_muestras{
+  text-align: left;
+  width: 75%;
+  /*
+  background:#8B8E90;
+  */
+  background:#265077;
+  position: right;
 }
 
-#conteiner_muestras{
-  text-align: left;  
-  width: 75%;
-  background:#8B8E90;
-
+.titulo_proyecto{
+  font-size: 35px;
 }
 .footer{
   height: 300px;
@@ -50,7 +74,7 @@
 body, html {
     width: 100%;
     height: 100%;
-    background:grey;
+    background: #022140;
     margin:0;
     padding:0;
 }
@@ -61,4 +85,8 @@ p{
 
 a{
   color: black;
+}
+
+h1{
+  margin-top: 0;
 }
