--- a/style.css
+++ b/style.css
@@ -19,14 +19,21 @@ mios:
 }
 
 #pre-body{
-  width: 800px;
-  height: 148px;
+  width: 55%;
+  height: 74px;
   background: #595B78;
   text-align: center;
   margin: auto;
   padding:0;
-  font-size: 30px;
+  font-size: 190%;
+  padding-top: 20px;
+  padding-bottom: 20px;
+
+  margin-top: 15px;
+  margin-bottom: 40px;
+  /*
   line-height: 64px;
+  */
 }
 
 .body{
