--- a/style.css
+++ b/style.css
@@ -89,14 +89,18 @@ mios:
 .titulo_proyecto{
   font-size: 35px;
 }
-.footer{
+#footer{
   height: 45vh;
   width: 100vw;
   background: black;
   align-self: center;
   text-align: center;
+  color: white;
 }
 
+#footer > p> a{
+  color: white;
+}
 body, html {
     width: 100vw;
     height: 100vh;
