--- a/style.css
+++ b/style.css
@@ -120,3 +120,12 @@ a{
 h1{
   margin-top: 0;
 }
+
+.muestra > a{
+  color: white;
+  font-family: "Serif", sans-serif;
+}
+p > a{
+  color: white;
+  font-family: "Serif", sans-serif;
+}
